ESPx evolution (interim) - MDNS

--- a/platformio.ini
+++ b/platformio.ini
@@ -149,8 +149,9 @@ lib_ignore =
 	HttpClient
 	ArduinoHttpClient
 lib_deps = 
-	https://github.com/ebenolson/WIFIMANAGER-ESP32.git
-	https://github.com/zhouhan0126/WebServer-esp32.git
+	;https://github.com/ebenolson/WIFIMANAGER-ESP32.git
+	;https://github.com/zhouhan0126/WebServer-esp32.git
+	https://github.com/tzapu/WiFiManager
 	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/knolleary/pubsubclient.git
@@ -175,7 +176,7 @@ lib_deps =
 	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
-	ArduinoMDNS
+	;ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
 monitor_speed = 115200
@@ -216,8 +217,9 @@ lib_ignore =
 	ArduinoHttpClient
 	M5Stack
 lib_deps = 
-	https://github.com/ebenolson/WIFIMANAGER-ESP32.git
-	https://github.com/zhouhan0126/WebServer-esp32.git
+	;https://github.com/ebenolson/WIFIMANAGER-ESP32.git
+	https://github.com/tzapu/WiFiManager
+	;https://github.com/zhouhan0126/WebServer-esp32.git
 	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/knolleary/pubsubclient.git
@@ -240,7 +242,8 @@ lib_deps =
 	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
-	ArduinoMDNS
+	;ArduinoMDNS
+	;ESPmDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
 monitor_speed = 115200
@@ -482,6 +485,8 @@ framework = arduino
 board = nodemcuv2
 monitor_baud = 115200
 upload_protocol = esptool
+build_type = debug
+monitor_filters = esp8266_exception_decoder
 
 ;upload_protocol = espota
 ;upload_port = Lighthub.local
@@ -499,11 +504,11 @@ lib_ignore =
 	DueFlashStorage
 	SD
 	SdFat
-	httpClient
-	HTTPClient
-	HttpClient_ID66
-	HttpClient
-	ArduinoHttpClient
+	;httpClient
+	;HTTPClient
+	;HttpClient_ID66
+	;HttpClient
+	;ArduinoHttpClient
 	Ethernet3
 	Ethernet2
 	Ethernet5100
@@ -519,7 +524,7 @@ lib_deps =
     ;COMMENT/UNCOMMENT next line for software 1-wire driver  on/off
     ;https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/ESP-Dmx
-	ESP8266HTTPClient
+	;ESP8266HTTPClient
 	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
@@ -541,6 +546,8 @@ lib_deps =
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	;ArduinoMDNS
+	;MDNS
+	ESP8266mDNS
 monitor_speed = 115200
 
 [env:mega2560-5100]
