STABILITY when re-load, Artnet, RGBWW, ETAG, Logs

--- a/platformio.ini
+++ b/platformio.ini
@@ -402,6 +402,7 @@ lib_deps =
 	https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/DmxSimple
 	https://github.com/anklimov/httpClient
+	;ArduinoHttpClient
 	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
@@ -609,7 +610,7 @@ framework = arduino
 board = due
 monitor_baud = 115200
 build_flags = !python get_build_flags.py lighthub21
-upload_command = arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
+upload_command = /opt/local/sbin/arduinoOTA -address 192.168.11.172 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
 ;upload_command = arduinoOTA -address 192.168.88.45 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 6
 upload_protocol = custom
 lib_ignore = 
