Mega2560slim RAM optimization

--- a/platformio.ini
+++ b/platformio.ini
@@ -317,6 +317,7 @@ board = megaatmega2560
 upload_port = net:192.168.88.2:23000
 framework = arduino
 build_flags = !python get_build_flags.py mega2560slim-5100
+extra_scripts = post:toBin.py
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
@@ -330,33 +331,44 @@ lib_ignore =
 	UIPEthernet
 	ESP_EEPROM
 	M5Stack
+	FastLED
+	Artnet
+	DMXSerial
+	Adafruit NeoPixel
+	DmxSimple
+	ModbusMaster
+	ClosedCube HDC1080
+	SparkFun CCS811 Arduino Library
+	;Adafruit BusIO
+	;Adafruit MCP23017 Arduino Library
+	;Adafruit Unified Sensor
 lib_deps = 
 	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
 	https://github.com/anklimov/DS2482_OneWire
-	https://github.com/anklimov/DmxSimple
+	;https://github.com/anklimov/DmxSimple
 	https://github.com/anklimov/httpClient
 	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
-	https://github.com/anklimov/ModbusMaster
-	https://github.com/anklimov/DMXSerial
+	;https://github.com/anklimov/ModbusMaster
+	;https://github.com/anklimov/DMXSerial
 	https://github.com/anklimov/Ethernet5100
     ;5100 lib have ~90 bytes less footprint of RAM
 	https://github.com/knolleary/pubsubclient.git
-	https://github.com/anklimov/Artnet.git
-	FastLED@3.3.2
+	;https://github.com/anklimov/Artnet.git
+	;FastLED@3.3.2
 	Adafruit Unified Sensor
 	DHT sensor library
 	https://github.com/arcao/Syslog.git
-	Streaming
-	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
-	Adafruit NeoPixel
+	;Streaming
+	;;ClosedCube HDC1080
+	;;SparkFun CCS811 Arduino Library@~1.0.7
+	;Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
-	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	;https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
 monitor_speed = 115200
 
