--- a/platformio.ini
+++ b/platformio.ini
@@ -359,7 +359,7 @@ lib_deps =
 	Adafruit Unified Sensor
 	DHT sensor library
 	https://github.com/arcao/Syslog.git
-	;Streaming
+	Streaming
 	;;ClosedCube HDC1080
 	;;SparkFun CCS811 Arduino Library@~1.0.7
 	;Adafruit NeoPixel
@@ -566,7 +566,7 @@ platform = atmelavr
 board = megaatmega2560
 monitor_baud = 115200
 framework = arduino
-upload_port = net:192.168.88.2:23000
+;upload_port = net:192.168.88.2:23000
 build_flags = !python get_build_flags.py mega2560-5100
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
@@ -620,8 +620,8 @@ framework = arduino
 board = due
 monitor_baud = 115200
 build_flags = !python get_build_flags.py lighthub21
-upload_command = /opt/local/sbin/arduinoOTA -address 192.168.11.172 -port 80 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
-;upload_command = arduinoOTA -address 192.168.88.45 -port 80 -username arduino -password password -b -upload /sketch -sketch $SOURCE;sleep 6
+upload_command = arduinoOTA -address 192.168.11.172 -port 80 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
+
 upload_protocol = custom
 lib_ignore = 
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
