optiboot ota fix & ac driver ram optimization

--- a/platformio.ini
+++ b/platformio.ini
@@ -395,8 +395,8 @@ monitor_speed = 115200
 platform = atmelavr
 ;For OTA programming - generating bin image
 extra_scripts = 
-        pre:extra_script.py
 		post:toBin.py
+		extra_script.py
 		
 ;OptiBoot setting
 board = ATmega2560
