PRE-RELEASE artnet fix & binaries

--- a/platformio.ini
+++ b/platformio.ini
@@ -602,6 +602,7 @@ extra_scripts = extra_script.py
 framework = arduino
 ;upload_port = net:192.168.88.2:23000
 build_flags = !python get_build_flags.py mega2560-5100
+_upload_command = custom-build-flags/upload_mega2560-5100 $SOURCE
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
