revert to correct file

--- a/platformio.ini
+++ b/platformio.ini
@@ -99,7 +99,7 @@ lib_deps =
 	https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/Ethernet
 	ArduinoHttpClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/knolleary/pubsubclient.git
@@ -110,8 +110,9 @@ lib_deps =
 	Streaming
 	https://github.com/anklimov/NRFFlashStorage
 	https://github.com/adafruit/Adafruit_NeoPixel.git
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
 	TimerInterrupt_Generic
@@ -156,9 +157,10 @@ lib_ignore =
 	HttpClient
 	ArduinoHttpClient
 lib_deps = 
-	https://github.com/ebenolson/WIFIMANAGER-ESP32.git
-	https://github.com/zhouhan0126/WebServer-esp32.git
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	;https://github.com/ebenolson/WIFIMANAGER-ESP32.git
+	;https://github.com/zhouhan0126/WebServer-esp32.git
+	https://github.com/tzapu/WiFiManager
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/knolleary/pubsubclient.git
 	Streaming
@@ -177,8 +179,9 @@ lib_deps =
 	SparkFun CCS811 Arduino Library@~1.0.7
 	M5Stack
 	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
 	;ArduinoMDNS
@@ -226,9 +229,10 @@ lib_ignore =
 	ArduinoHttpClient
 	M5Stack
 lib_deps = 
-	https://github.com/ebenolson/WIFIMANAGER-ESP32.git
-	https://github.com/zhouhan0126/WebServer-esp32.git
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	;https://github.com/ebenolson/WIFIMANAGER-ESP32.git
+	https://github.com/tzapu/WiFiManager
+	;https://github.com/zhouhan0126/WebServer-esp32.git
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/knolleary/pubsubclient.git
 	Streaming
@@ -245,8 +249,9 @@ lib_deps =
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
-    https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+    https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
 	;ArduinoMDNS
@@ -300,7 +305,7 @@ lib_deps =
 	https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/DmxDue
 	ArduinoHttpClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/anklimov/Ethernet.git
@@ -316,8 +321,15 @@ lib_deps =
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
+	https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
+	br3ttb/PID@^1.2.1
+	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 monitor_speed = 115200
 
+[env:mega2560slim-5100]
 platform = atmelavr
 board = megaatmega2560
 upload_port = net:192.168.88.2:23000
@@ -351,9 +363,9 @@ lib_ignore =
 lib_deps = 
 	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
 	https://github.com/anklimov/DS2482_OneWire
-	https://github.com/anklimov/DmxDue
-	ArduinoHttpClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	;https://github.com/anklimov/DmxSimple
+	https://github.com/anklimov/httpClient
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	;https://github.com/anklimov/ModbusMaster
 	;https://github.com/anklimov/DMXSerial
@@ -366,11 +378,12 @@ lib_deps =
 	DHT sensor library
 	https://github.com/arcao/Syslog.git
 	Streaming
-	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
-	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	;;ClosedCube HDC1080
+	;;SparkFun CCS811 Arduino Library@~1.0.7
+	;Adafruit NeoPixel
+	https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
 	;https://github.com/khoih-prog/TimerInterrupt_Generic.git
@@ -424,7 +437,8 @@ lib_deps =
 	https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/DmxSimple
 	https://github.com/anklimov/httpClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	;ArduinoHttpClient
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/anklimov/DMXSerial
@@ -441,8 +455,9 @@ lib_deps =
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
@@ -476,7 +491,7 @@ lib_deps =
 	https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/DmxSimple
 	https://github.com/anklimov/httpClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/anklimov/DMXSerial
@@ -491,8 +506,9 @@ lib_deps =
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
@@ -553,8 +569,8 @@ lib_deps =
     ;COMMENT/UNCOMMENT next line for software 1-wire driver  on/off
     ;https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/ESP-Dmx
-	ESP8266HTTPClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	;ESP8266HTTPClient
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/knolleary/pubsubclient.git
@@ -570,8 +586,9 @@ lib_deps =
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	https://github.com/anklimov/ArduinoOTA.git
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	;ArduinoMDNS
 	;MDNS
@@ -607,7 +624,7 @@ lib_deps =
 	https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/DmxSimple
 	https://github.com/anklimov/httpClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/anklimov/DMXSerial
@@ -622,61 +639,13 @@ lib_deps =
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
-[env:due-5500]
-platform = atmelsam
-framework = arduino
-board = due
-build_flags = !python get_build_flags.py due-5500
-lib_ignore = 
-    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
-	DHT sensor library for ESPx
-	ESPDMX
-	ESP-Dmx
-	DMXSerial
-	WifiManager
-	DmxSimple
-	httpClient
-	Ethernet
-	Ethernet3
-	Ethernet5100
-	NRFFlashStorage
-	WebServer
-	UIPEthernet
-	ESP_EEPROM
-	EEPROM
-	M5Stack
-lib_deps = 
-	https://github.com/sebnil/DueFlashStorage
-	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-	https://github.com/anklimov/DS2482_OneWire
-	https://github.com/anklimov/DmxDue
-	ArduinoHttpClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
-	https://github.com/anklimov/CmdArduino
-	https://github.com/anklimov/ModbusMaster
-	https://github.com/anklimov/Ethernet2
-	https://github.com/knolleary/pubsubclient.git
-	https://github.com/anklimov/Artnet.git
-	FastLED@3.3.2
-	SD
-	SdFat
-	Adafruit Unified Sensor
-	DHT sensor library
-	https://github.com/arcao/Syslog.git
-	Streaming
-	https://github.com/livello/PrintEx#is-select-redecl
-	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
-	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
-	br3ttb/PID@^1.2.1
 monitor_speed = 115200
 
 
@@ -719,7 +688,7 @@ lib_deps =
 	https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/DmxDue
 	ArduinoHttpClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/anklimov/Ethernet
@@ -736,8 +705,9 @@ lib_deps =
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
@@ -770,7 +740,7 @@ lib_deps =
 	https://github.com/anklimov/DS2482_OneWire
 	https://github.com/anklimov/DmxSimple
 	https://github.com/anklimov/httpClient
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/anklimov/DMXSerial
@@ -785,8 +755,9 @@ lib_deps =
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library@~1.0.7
 	Adafruit NeoPixel
-	https://github.com/anklimov/ArduinoOTA#8feeea77869a5039857d2d23d0a46f8a8fe1514a
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
@@ -834,7 +805,7 @@ lib_ignore =
 	M5Stack
 	ArduinoOTA
 lib_deps = 
-	https://github.com/anklimov/aJson#b063de5fb8041e039aaff06b21790edb12c22fdf
+	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	ArduinoHttpClient
 	https://github.com/knolleary/pubsubclient.git
@@ -842,7 +813,69 @@ lib_deps =
 	UIPEthernet
 	https://github.com/anklimov/NRFFlashStorage
 	Adafruit NeoPixel
-	https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library#65438e94ef5cdeb73d7a79d37b8ca46ee9331cd2
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
+	SPI
+	br3ttb/PID@^1.2.1
+	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+
+monitor_speed = 115200
+
+
+[env:stm32]
+platform = ststm32
+board = olimexino
+board_build.mcu = stm32f103rbt6
+board_build.f_cpu = 72000000L
+framework = arduino
+
+monitor_dtr = 1
+upload_protocol = dfu
+;debug_tool = cmsis-dap
+build_flags = !python get_build_flags.py stm32
+lib_ignore = 
+   ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
+	DHT sensor library for ESPx
+	DmxDue
+	DueFlashStorage
+	ESPDMX
+	ESP-Dmx
+	WifiManager
+	FastLED
+	UIPEthernet
+	DMXSerial
+	DmxSimple
+	httpClient
+	SD
+	PrintEx
+	Ethernet2
+	Artnet
+	Ethernet3
+	WebServer
+	ESP_EEPROM
+	DHT sensor library
+	DallasTemperature
+	Adafruit Unified Sensor
+	DS2482_OneWire
+	ModbusMaster
+	Syslog
+	EEPROM
+	ClosedCube HDC1080
+	SparkFun CCS811 Arduino Library
+	M5Stack
+	ArduinoOTA
+lib_deps = 
+	https://github.com/anklimov/aJson
+	https://github.com/anklimov/CmdArduino
+	ArduinoHttpClient
+	https://github.com/knolleary/pubsubclient.git
+	Streaming
+	Ethernet
+	https://github.com/anklimov/NRFFlashStorage
+	Adafruit NeoPixel
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
 	SPI
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
