noSerial option, DHT fix, 8266 slim to fit Sonoff

--- a/platformio.ini
+++ b/platformio.ini
@@ -516,11 +516,13 @@ lib_deps =
 [env:esp8266-wifi]
 platform = espressif8266
 framework = arduino
-board = nodemcuv2
+;board = nodemcuv2
+board = esp01_1m
 extra_scripts = extra_script.py
+board_build.ldscript = eagle.flash.1m64.ld
 ;upload_protocol = esptool
-build_type = debug
-monitor_filters = esp8266_exception_decoder
+;build_type = debug
+;monitor_filters = esp8266_exception_decoder
 
 ;upload_protocol = espota
 ;upload_port = Lighthub.local
@@ -534,7 +536,7 @@ monitor_filters = esp8266_exception_decoder
 ;upload_command = arduinoOTA -address 192.168.1.17 -port 80 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
 
 ;Alternatively, use OTA script for target ota (pio -t ota). Place appropriate script to custom-build-flags/ to allow OTA by one click
-_upload_command = custom-build-flags/upload_esp8266-wifi $SOURCE
+_upload_command = custom-build-flags/upload_esp8266-wifi.bat $SOURCE
 
 build_flags = !python get_build_flags.py esp8266-wifi
 
