--- a/platformio.ini
+++ b/platformio.ini
@@ -331,6 +331,7 @@ monitor_speed = 115200
 platform = atmelavr
 board = megaatmega2560
 upload_port = net:192.168.88.2:23000
+_upload_command = custom-build-flags/upload_mega2560slim-5100 $SOURCE
 framework = arduino
 build_flags = !python get_build_flags.py mega2560slim-5100
 extra_scripts = post:toBin.py
