STM32 persistent MVP, cross-compiled & binaries

--- a/platformio.ini
+++ b/platformio.ini
@@ -827,13 +827,19 @@ monitor_speed = 115200
 
 [env:stm32]
 platform = ststm32
-board = olimexino
-board_build.mcu = stm32f103rbt6
+board = genericSTM32F103RB
+;olimexino
+board_build.mcu = stm32f103rbt6 
+;STM32Duino
+;generic_stm32f103r 
+;board_build.ldscript=ldscripts\stm32f103rb_bootloader.ld 
 board_build.f_cpu = 72000000L
 framework = arduino
-
-monitor_dtr = 1
-upload_protocol = dfu
+;board_build.core = maple
+;board_build.core = maple // STM32Duino (DEFAULT) // STM32L0
+;board_build.core = stm32lo
+;monitor_dtr = 1
+upload_protocol = serial
 ;debug_tool = cmsis-dap
 build_flags = !python get_build_flags.py stm32
 lib_ignore = 
@@ -862,19 +868,20 @@ lib_ignore =
 	DS2482_OneWire
 	ModbusMaster
 	Syslog
-	EEPROM
+	NRFFlashStorage
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library
 	M5Stack
 	ArduinoOTA
 lib_deps = 
+    EEPROM
 	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	ArduinoHttpClient
 	https://github.com/anklimov/pubsubclient.git
 	Streaming
 	Ethernet
-	https://github.com/anklimov/NRFFlashStorage
+	
 	Adafruit NeoPixel
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
