mac save&AC swmode fixes, sha256 sign for cmd tst

--- a/platformio.ini
+++ b/platformio.ini
@@ -325,6 +325,7 @@ lib_deps =
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	rweather/Crypto
 monitor_speed = 115200
 
 [env:mega2560slim-5100]
@@ -460,6 +461,7 @@ lib_deps =
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	rweather/Crypto
 
 monitor_speed = 115200
 
@@ -713,7 +715,7 @@ lib_deps =
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	https://github.com/rlogiacco/CircularBuffer
-
+    rweather/Crypto
 monitor_speed = 115200
 
 [env:controllino]
