cross-compiled & binaries

--- a/platformio.ini
+++ b/platformio.ini
@@ -803,12 +803,13 @@ lib_ignore =
 	DS2482_OneWire
 	ModbusMaster
 	Syslog
-	EEPROM
+	;EEPROM
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library
 	M5Stack
 	ArduinoOTA
 lib_deps = 
+    EEPROM
 	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
 	ArduinoHttpClient
@@ -891,6 +892,7 @@ lib_deps =
 	br3ttb/PID@^1.2.1
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	;https://github.com/anklimov/ModbusMaster
 
 monitor_speed = 115200
 
