binaries & migration 2560 slim to universal Wiznet

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,9 @@ src_dir = lighthub
 default_envs = 
 ;   ****** UNCOMMENT single environment name for target platform below *******
 
-; Arduino Mega compact build + Ethernet shield Wiznet 5100, 1-wire, thermostates.
-; Without DMX, Wiznet 5100 network driver
-;    mega2560slim-5100
+; Arduino Mega compact build + Ethernet shield Wiznet 5X00, 1-wire, thermostates.
+; Without DMX, Wiznet  network driver
+;    mega2560slim
 
 ; Another Arduino Mega compact build without 1-wire, DMX, but with OTA
 ; OPTIBOOT bootloader required! https://github.com/MCUdude/MegaCore
@@ -328,13 +328,13 @@ lib_deps =
 	rweather/Crypto
 monitor_speed = 115200
 
-[env:mega2560slim-5100]
+[env:mega2560slim]
 platform = atmelavr
 board = megaatmega2560
 upload_port = net:192.168.88.2:23000
-_upload_command = custom-build-flags/upload_mega2560slim-5100 $SOURCE
+_upload_command = custom-build-flags/upload_mega2560slim $SOURCE
 framework = arduino
-build_flags = !python get_build_flags.py mega2560slim-5100
+build_flags = !python get_build_flags.py mega2560slim
 extra_scripts = post:toBin.py
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
@@ -369,8 +369,9 @@ lib_deps =
 	https://github.com/anklimov/CmdArduino
 	;https://github.com/anklimov/ModbusMaster
 	;https://github.com/anklimov/DMXSerial
-	https://github.com/anklimov/Ethernet5100
+	;https://github.com/anklimov/Ethernet5100
     ;5100 lib have ~90 bytes less footprint of RAM
+	https://github.com/anklimov/Ethernet.git
 	https://github.com/anklimov/pubsubclient.git
 	;https://github.com/anklimov/Artnet.git
 	;FastLED@3.3.2
