bins & cross-compilation

--- a/platformio.ini
+++ b/platformio.ini
@@ -193,7 +193,7 @@ monitor_speed = 115200
 platform = espressif32
 framework = arduino
 monitor_filters = esp32_exception_decoder
-build_type = debug
+;build_type = debug
 board = esp32-evb
 extra_scripts = extra_script.py
 monitor_speed = 115200
@@ -521,10 +521,24 @@ lib_deps =
 platform = espressif8266
 framework = arduino
 ;board = nodemcuv2
-board = esp01_1m
+;esp12e             ESP8266  80MHz        4MB      80KB   Espressif ESP8266 ESP-12E
+;esp01_1m           ESP8266  80MHz        1MB      80KB   Espressif Generic ESP8266 ESP-01 1M
 extra_scripts = extra_script.py
-board_build.ldscript = eagle.flash.1m64.ld
-;upload_protocol = esptool
+
+;;;; 1M plug ;;;
+;board = esp01_1m
+;board_build.ldscript = eagle.flash.1m64.ld
+;;;;;;;;;;;;;;;;;;;
+
+;;;; WEMOS D1 ;;;;;
+board = d1_mini
+; change microcontroller
+board_build.mcu = esp8266
+; change MCU frequency
+board_build.f_cpu = 80000000L
+upload_protocol = esptool
+;;;;;;;;;;;;;;;;;;;
+
 ;build_type = debug
 ;monitor_filters = esp8266_exception_decoder
 
