NOIP compilation option & some inits

--- a/platformio.ini
+++ b/platformio.ini
@@ -911,6 +911,76 @@ lib_deps =
 
 monitor_speed = 115200
 
+
+[env:stm32-noip]
+platform = ststm32
+board = genericSTM32F103RB
+;olimexino
+board_build.mcu = stm32f103rbt6 
+;STM32Duino
+;generic_stm32f103r 
+;board_build.ldscript=ldscripts\stm32f103rb_bootloader.ld 
+board_build.f_cpu = 72000000L
+framework = arduino
+;board_build.core = maple
+;board_build.core = maple // STM32Duino (DEFAULT) // STM32L0
+;board_build.core = stm32lo
+;monitor_dtr = 1
+upload_protocol = serial
+;debug_tool = cmsis-dap
+build_flags = !python get_build_flags.py stm32-noip
+lib_ignore = 
+   ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
+	DHT sensor library for ESPx
+	DmxDue
+	DueFlashStorage
+	ESPDMX
+	ESP-Dmx
+	WifiManager
+	FastLED
+	UIPEthernet
+	DMXSerial
+	DmxSimple
+	httpClient
+	SD
+	PrintEx
+	Ethernet2
+	Artnet
+	Ethernet3
+	WebServer
+	ESP_EEPROM
+	DHT sensor library
+	DallasTemperature
+	Adafruit Unified Sensor
+	DS2482_OneWire
+	ModbusMaster
+	Syslog
+	NRFFlashStorage
+	ClosedCube HDC1080
+	SparkFun CCS811 Arduino Library
+	M5Stack
+	ArduinoOTA
+lib_deps = 
+    EEPROM
+	https://github.com/anklimov/aJson
+	https://github.com/anklimov/CmdArduino
+;	ArduinoHttpClient
+;	https://github.com/anklimov/pubsubclient.git
+	Streaming
+;	Ethernet
+	
+	Adafruit NeoPixel
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
+	SPI
+	br3ttb/PID@^1.2.1
+;	ArduinoMDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	;https://github.com/anklimov/ModbusMaster
+
+monitor_speed = 115200
+
+
 ; Run the following command to upload with this environment
 ; pio run -e Upload_ISP -t upload
 [env:Upload_ISP]
