--- a/platformio.ini
+++ b/platformio.ini
@@ -258,7 +258,7 @@ lib_deps =
 	;ArduinoMDNS
 	;ESPmDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
-
+    https://github.com/sandeepmistry/arduino-CAN.git
 
 [env:due]
 ;Experimental target with universal Ethernet Library
@@ -326,6 +326,8 @@ lib_deps =
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	rweather/Crypto
+	collin80/can_common
+    collin80/due_can
 monitor_speed = 115200
 
 [env:mega2560slim]
@@ -977,6 +979,7 @@ lib_deps =
 ;	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	;https://github.com/anklimov/ModbusMaster
+	pazi88/STM32_CAN
 
 monitor_speed = 115200
 
