DEFAULT_OTA_USERNAME  DEFAULT_OTA_PASSWORD compilation options new 16u2 firmware

--- a/platformio.ini
+++ b/platformio.ini
@@ -258,7 +258,7 @@ lib_deps =
 	;ArduinoMDNS
 	;ESPmDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
-    https://github.com/sandeepmistry/arduino-CAN.git
+    https://github.com/anklimov/arduino-CAN.git
 
 [env:due]
 ;Experimental target with universal Ethernet Library
@@ -982,6 +982,7 @@ lib_deps =
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	;https://github.com/anklimov/ModbusMaster
 	pazi88/STM32_CAN
+	ericksimoes/Ultrasonic
 
 monitor_speed = 115200
 
