post-refactoring fixes: $command, Items-Parse

--- a/platformio.ini
+++ b/platformio.ini
@@ -356,9 +356,11 @@ lib_ignore =
 	DMXSerial
 	Adafruit NeoPixel
 	DmxSimple
-	
+	ModbusMaster
 	ClosedCube HDC1080
 	SparkFun CCS811 Arduino Library
+	;ArduinoOTA
+	ArduinoMDNS
 	;Adafruit BusIO
 	;Adafruit MCP23017 Arduino Library
 	;Adafruit Unified Sensor
@@ -369,7 +371,7 @@ lib_deps =
 	https://github.com/anklimov/httpClient
 	https://github.com/anklimov/aJson
 	https://github.com/anklimov/CmdArduino
-	https://github.com/anklimov/ModbusMaster
+	;https://github.com/anklimov/ModbusMaster
 	;https://github.com/anklimov/DMXSerial
 	;https://github.com/anklimov/Ethernet5100
     ;5100 lib have ~90 bytes less footprint of RAM
@@ -388,7 +390,7 @@ lib_deps =
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	br3ttb/PID@^1.2.1
-	ArduinoMDNS
+	;ArduinoMDNS
 	;https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
 monitor_speed = 115200
