less CAN logging DISABLE for group channel (disarming) reguire signature trace level logging fixed esp32 = changed compilation options

--- a/platformio.ini
+++ b/platformio.ini
@@ -193,8 +193,9 @@ monitor_speed = 115200
 platform = espressif32
 framework = arduino
 monitor_filters = esp32_exception_decoder
-;build_type = debug
-board = esp32-evb
+build_type = debug
+board = upesy_wroom
+board_build.partitions = min_spiffs.csv
 extra_scripts = extra_script.py
 monitor_speed = 115200
 
